--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
 
         END PRACTICE
 
-        <h1>Welcome</h1>
+        PRACTICE 2/6
+
+        <h1 id="somename">Welcome</h1>
         <br>
-        <h2>Now offering<strong> 25% off</strong> select plans</h2>
+        <h2 id="someothername" id="italic">Now offering<strong> 25% off</strong> select plans</h2>
         <h5>slogan or special promotion type</h5>
         <br>
         <h2>
