--- a/index.html
+++ b/index.html
@@ -5,46 +5,46 @@
     <meta charset="utf-8">
     <title>Choice Chef</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+
 </head>
 
 <body>
     <header>
         <nav>
+            <a href="index.html"><img src="images/Choice_Logo.jpg" height="200" alt="Choice Chef logo"></a>
             <a href="about.html">About</a> &nbsp; &nbsp; <a href="dis.html">Discover</a> &nbsp; &nbsp; <a href="ddoane516@gmail.com">Contact</a>
             <br>
         </nav>
     </header>
     <main>
-        <ul>
-            <a href="index.html"><img src="images/image name" height="100" alt="Choice Chef logo"></a>
-            <li><a href="www.google.com">Item 1</a></li> (Absolute Link)
-            <li><a href="features.html">Item 2</a></li> (Relative Link)
-            <li> Item 3 </li>
-        </ul>
-
-        <h1 id="somename">Welcome</h1>
+        <h1>Welcome</h1>
+        <a href="index.html"><img src="images/header.jpeg" height="400" alt="A family meal over the dinner table"></a>
         <br>
-        <h2 id="someothername" id="italic">Now offering<strong> 25% off</strong> select plans</h2>
+        <br>
+        <h2>Now offering<strong> 25% off</strong> select plans</h2>
         <h5>slogan or special promotion type</h5>
         <br>
-        <h2>
-            <nav>
-                <div>New Offers</div>
-            </nav>
+
+        <h2><a class="boxelement" href="index.html">Discounts</a> &nbsp; &nbsp; <a href="index.html">New Offers</a>
         </h2>
-        <p><strong>Paragraph</strong></p>
-        <h2>
-            <nav> Discounts </nav>
-        </h2>
-        <p><strong>Paragraph</strong></p>
+        <br>
+        <br>
+        <nav>
+            <div>New Offers</div>
+        </nav>
+        <p><em>Paragraph</em></p>
+        <nav>
+            <div>Discounts</div>
+        </nav>
+        <p><em>Paragraph</em></p>
     </main>
+    <br>
+    <br>
     <footer>
         &copy; Doane 2020
         <br>
         <p><em>123 Earth Drive<strong> 888 555 1189</strong></em></p>
-
     </footer>
-
 </body>
 
 </html>
