--- a/about.html
+++ b/about.html
@@ -8,21 +8,31 @@
 </head>
 
 <body>
-    <header class="header">
+    <header>
+
         <nav>
-            <a href="dis.html">Discover</a> &nbsp; &nbsp;<a href="ddoane516@gmail.com">Contact</a>
-            <br>
+            <a href="index.html"><img src="images/Choice_Logo.jpg" height="200" alt="Choice Chef logo"></a>
+
+            <a href="discover.html">Discover</a>
+
         </nav>
     </header>
-    <a href="https://www.mbusa.com/en/home" target="_blank">Our Inspiration</a>
-    <h2>We understand the importance of a good meal, that's why we want to help make yours perfect.</h2>
-    <br>
-    <p>Once upon a time...</p>
-    <a href="about(feat.).html"><img src="images/around-table.jpeg" height="400" alt="friends around a table"></a>
+    <main>
+        <h2>We understand the importance of a good meal, that's why we want to help make yours perfect.</h2>
+        <br>
+        <p>Once upon a time...</p>
+        <a href="about(feat.).html"><img src="images/around-table.jpeg" height="400" alt="friends around a table"></a>
+
+        <p>Once upon a time...</p>
+        <em>This is the story of how I came up with this company idea, where it would theoretically be located.</em>
+        <br>
+        <ul>
+            <li>Hours of operation
+            <li> Email info.
+            <li> Location
+        </ul>
+    </main>
     <footer>
         <p>&copy; Doane 2020 &nbsp; <em>123 Earth Drive <strong> 888 555 1189 </strong></em></p>
     </footer>
-
-</body>
-
-</html>
+</body></html>
