--- a/discover.html
+++ b/discover.html
@@ -12,14 +12,14 @@
         <nav>
             <a href="index.html"><img src="images/Choice_Logo.jpg" height="200" alt="Choice Chef logo"></a>
 
-            <a href="about.html">About</a> &nbsp; &nbsp;<a href="ddoane516@gmail.com">Contact</a>
+            <a href="about.html">About</a>
         </nav>
     </header>
     <main>
         <h1>What are you looking for?</h1>
         <h3>Select a style and discover your perfect match!</h3>
         <br>
-        <a  href="discover(pics).html"><img src="images/Italian.jpeg" height="300" alt="Italian"> </a>
+        <a href="discover(pics).html"><img src="images/Italian.jpeg" height="300" alt="Italian"> </a>
         <p>Italian</p>
         <a href="discover(pics).html"><img src="images/Mediteranian.jpeg" height="300" alt="Mediteranian"> </a>
         <p>Mediteranian</p>
