--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <header>
         <nav>
             <a href="index.html"><img src="images/Choice_Logo.jpg" height="200" alt="Choice Chef logo"></a>
-            <a href="about.html">About</a> &nbsp; &nbsp; <a href="dis.html">Discover</a> &nbsp; &nbsp; <a href="ddoane516@gmail.com">Contact</a>
+            <a href="about.html">About</a> &nbsp; &nbsp;
+            <a href="discover.html">Discover</a> &nbsp; &nbsp;
             <br>
         </nav>
     </header>
@@ -25,7 +26,7 @@
         <h5>slogan or special promotion type</h5>
         <br>
 
-        <h2><a class="boxelement" href="index.html">Discounts</a> &nbsp; &nbsp; <a href="index.html">New Offers</a>
+        <h2><a href="index.html">Discounts</a> &nbsp; &nbsp; <a href="index.html">New Offers</a>
         </h2>
         <br>
         <br>
@@ -44,6 +45,7 @@
         &copy; Doane 2020
         <br>
         <p><em>123 Earth Drive<strong> 888 555 1189</strong></em></p>
+        <a href="mailto:ddoane516@gmail.com">Contact</a>
     </footer>
 </body>
 
