--- a/index.html
+++ b/index.html
@@ -19,14 +19,13 @@
     </header>
     <main>
         <h1>Welcome</h1>
-        <a href="index.html"><img src="images/header.jpeg" height="400" alt="A family meal over the dinner table"></a>
-        <br>
+
         <br>
         <h2>Now offering<strong> 25% off</strong> select plans</h2>
         <h5>slogan or special promotion type</h5>
         <br>
 
-        <h2><a href="index.html">Discounts</a> &nbsp; &nbsp; <a href="index.html">New Offers</a>
+        <h2><a href="discover.html">Discounts</a> &nbsp; &nbsp; <a href="discover.html">New Offers</a>
         </h2>
         <br>
         <br>
