--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <header>
 
         <nav>
-            <a href="index.html"><img src="images/Choice_Logo.jpg" height="200" alt="Choice Chef logo"></a>
+            <a href="index.html"><img src="images/Choice_Logo.jpg" height="100" alt="Choice Chef logo"></a>
 
             <a href="discover.html">Discover</a>
 
@@ -23,16 +23,8 @@
         <p>Once upon a time...</p>
         <a href="about(feat.).html"><img src="images/around-table.jpeg" height="400" alt="friends around a table"></a>
 
-        <p>Once upon a time...</p>
-        <em>This is the story of how I came up with this company idea, where it would theoretically be located.</em>
-        <br>
-        <ul>
-            <li>Hours of operation
-            <li> Email info.
-            <li> Location
-        </ul>
     </main>
     <footer>
-        <p>&copy; Doane 2020 &nbsp; <em>123 Earth Drive <strong> 888 555 1189 </strong></em></p>
+        <p1>&copy; Doane 2020 &nbsp; <em>123 Earth Drive <strong> 888 555 1189 </strong></em></p1>
     </footer>
 </body></html>
