--- a/discover.html
+++ b/discover.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-            <a href="index.html"><img src="images/Choice_Logo.jpg" height="200" alt="Choice Chef logo"></a>
+            <a href="index.html"><img src="images/Choice_Logo.jpg" height="100" alt="Choice Chef logo"></a>
 
             <a href="about.html">About</a>
         </nav>
@@ -30,7 +30,7 @@
     </main>
 
     <footer>
-        <p>&copy; Doane 2020 &nbsp; <em>123 Earth Drive <strong> 888 555 1189 </strong></em></p>
+        <p1>&copy; Doane 2020 &nbsp; <em>123 Earth Drive <strong> 888 555 1189 </strong></em></p1>
     </footer>
 </body>
 
