--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <a href="index.html"><img src="images/Choice_Logo.jpg" height="200" alt="Choice Chef logo"></a>
+            <a href="index.html"><img src="images/Choice_Logo.jpg" height="100" alt="Choice Chef logo"></a>
             <a href="about.html">About</a> &nbsp; &nbsp;
             <a href="discover.html">Discover</a> &nbsp; &nbsp;
             <br>
@@ -19,22 +19,13 @@
     </header>
     <main>
         <h1>Welcome</h1>
-
-        <br>
+        <a href="index.html"><img src="images/header.jpeg" height="400" alt="A family meal over the dinner table"></a>
         <h2>Now offering<strong> 25% off</strong> select plans</h2>
         <h5>slogan or special promotion type</h5>
-        <br>
-
-        <h2><a href="discover.html">Discounts</a> &nbsp; &nbsp; <a href="discover.html">New Offers</a>
+        <h2><a href="index.html">New Offers</a>
         </h2>
-        <br>
-        <br>
         <nav>
             <div>New Offers</div>
-        </nav>
-        <p><em>Paragraph</em></p>
-        <nav>
-            <div>Discounts</div>
         </nav>
         <p><em>Paragraph</em></p>
     </main>
@@ -43,7 +34,7 @@
     <footer>
         &copy; Doane 2020
         <br>
-        <p><em>123 Earth Drive<strong> 888 555 1189</strong></em></p>
+        <p1><em>123 Earth Drive<strong> 888 555 1189</strong></em></p1>
         <a href="mailto:ddoane516@gmail.com">Contact</a>
     </footer>
 </body>
