--- a/about.html
+++ b/about.html
@@ -18,13 +18,18 @@
         </nav>
     </header>
     <main>
+        <a href="about(feat.).html"><img src="images/chef2.jpeg" height="400" alt="chef at work"></a>
         <h2>We understand the importance of a good meal, that's why we want to help make yours perfect.</h2>
+        <p class="ourstory"><em>Once upon a time...our company began as a way to allow food artists to create meals for those who do not have the time or ability to create masterful meals for events such as weddings, birthdays, holidays, and so much more!We're a small family owned online business located in Upstate New York and available across the country for those who appreciate the ability and craft of cooking a meal in the comfort of your own home.</em></p>
         <br>
-        <p>Once upon a time...</p>
-        <a href="about(feat.).html"><img src="images/around-table.jpeg" height="400" alt="friends around a table"></a>
-
+        <a href="about(feat.).html"><img src="images/chef1.jpeg" height="400" alt="second chef at work"></a>
     </main>
+    <br>
+    <br>
+    <br>
     <footer>
-        <p1>&copy; Doane 2020 &nbsp; <em>123 Earth Drive <strong> 888 555 1189 </strong></em></p1>
+        <p1>&copy; Doane 2020 &nbsp; <em>123 Earth Drive 888 555 1189</em></p1>
     </footer>
-</body></html>
+</body>
+
+</html>
