--- a/discover.html
+++ b/discover.html
@@ -19,18 +19,32 @@
         <h1>What are you looking for?</h1>
         <h3>Select a style and discover your perfect match!</h3>
         <br>
-        <a href="discover(pics).html"><img src="images/Italian.jpeg" height="300" alt="Italian"> </a>
-        <p>Italian</p>
-        <a href="discover(pics).html"><img src="images/Mediteranian.jpeg" height="300" alt="Mediteranian"> </a>
-        <p>Mediteranian</p>
-        <a href="discover(pics).html"><img src="images/Sweets.jpeg" height="300" alt="Sweets"> </a>
-        <p>Sweets</p>
+        <a class="imagedesign" href="discover(pics).html"><img src="images/Italian.jpeg" height="300" alt="Italian"> <img src="images/Mediteranian.jpeg" height="300" alt="Mediteranian"><img src="images/Sweets.jpeg" height="300" alt="Sweets"> </a>
         <br>
-        <br>
+        <nav>
+            <ul>
+                <li>
+                    <h2><strong>Italian</strong></h2>
+                </li>
+                <li>
+                    <h2><strong>Mediteranian</strong></h2>
+                </li>
+                <li>
+                    <h2><strong>Asian</strong></h2>
+                </li>
+                <li>
+                    <h2><strong>Mexican</strong></h2>
+                </li>
+                <li>
+                    <h2><strong>Dessert</strong></h2>
+                </li>
+                <br>
+            </ul>
+        </nav>
     </main>
 
     <footer>
-        <p1>&copy; Doane 2020 &nbsp; <em>123 Earth Drive <strong> 888 555 1189 </strong></em></p1>
+        <p1>&copy; Doane 2020 &nbsp; <em>123 Earth Drive 888 555 1189</em></p1>
     </footer>
 </body>
 
