--- a/index.html
+++ b/index.html
@@ -11,30 +11,30 @@
 <body>
     <header>
         <nav>
-            <a href="index.html"><img src="images/Choice_Logo.jpg" height="100" alt="Choice Chef logo"></a>
-            <a href="about.html">About</a> &nbsp; &nbsp;
-            <a href="discover.html">Discover</a> &nbsp; &nbsp;
+            <em>
+                <a href="index.html"><img src="images/Choice_Logo.jpg" height="100" alt="Choice Chef logo"></a>
+                <br>
+                <a href="about.html">About</a> &nbsp; &nbsp;
+                <a href="discover.html">Discover</a> &nbsp; &nbsp;
+            </em>
             <br>
         </nav>
     </header>
     <main>
-        <h1>Welcome</h1>
+        <h1 id="welcome">Welcome</h1>
         <a href="index.html"><img src="images/header.jpeg" height="400" alt="A family meal over the dinner table"></a>
         <h2>Now offering<strong> 25% off</strong> select plans</h2>
-        <h5>slogan or special promotion type</h5>
-        <h2><a href="index.html">New Offers</a>
-        </h2>
         <nav>
             <div>New Offers</div>
+            <h5>slogan or special promotion type</h5>
         </nav>
-        <p><em>Paragraph</em></p>
     </main>
     <br>
     <br>
     <footer>
         &copy; Doane 2020
         <br>
-        <p1><em>123 Earth Drive<strong> 888 555 1189</strong></em></p1>
+        <p1><em>123 Earth Drive 888 555 1189</em></p1>
         <a href="mailto:ddoane516@gmail.com">Contact</a>
     </footer>
 </body>
