--- a/discover.html
+++ b/discover.html
@@ -16,7 +16,7 @@
         </nav>
     </header>
     <main>
-        <h1>What are you looking for?</h1>
+        <h1 id="welcome">What are you looking for?</h1>
         <h3>Select a style and discover your perfect match!</h3>
         <br>
         <a class="imagedesign" href="discover(pics).html"><img src="images/Italian.jpeg" height="300" alt="Italian"> <img src="images/Mediteranian.jpeg" height="300" alt="Mediteranian"><img src="images/Sweets.jpeg" height="300" alt="Sweets"> </a>
@@ -38,13 +38,13 @@
                 <li>
                     <h2><strong>Dessert</strong></h2>
                 </li>
-                <br>
             </ul>
+            <br>
         </nav>
     </main>
 
     <footer>
-        <p1>&copy; Doane 2020 &nbsp; <em>123 Earth Drive 888 555 1189</em></p1>
+        <div>&copy; Doane 2020 &nbsp; <em>123 Earth Drive 888 555 1189</em></div>
     </footer>
 </body>
 
