--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
     <main>
         <h1 id="welcome">Welcome</h1>
         <a href="index.html"><img src="images/header.jpeg" height="400" alt="A family meal over the dinner table"></a>
-        <h2>Now offering<strong> 25% off</strong> select plans</h2>
+        <h2>Now Offering<strong><em> 25% Off</em></strong> Select Plans</h2>
         <nav>
-            <div>New Offers</div>
-            <h5>slogan or special promotion type</h5>
+            <p id="topics"> Check out some of our new offers in Sea Food and Southern Cuisine!</p>
         </nav>
     </main>
     <br>
@@ -34,7 +33,7 @@
     <footer>
         &copy; Doane 2020
         <br>
-        <p1><em>123 Earth Drive 888 555 1189</em></p1>
+        <div><em>123 Earth Drive 888 555 1189</em></div>
         <a href="mailto:ddoane516@gmail.com">Contact</a>
     </footer>
 </body>
